tests/snapshots/golden_snapshot_tests__golden_support_level_restricted.snap
---
source: tests/golden_snapshot_tests.rs
expression: "SupportLevel::Restricted { reason: \"policy sandbox\".into(), }"
---
{
  "restricted": {
    "reason": "policy sandbox"
  }
}
