tests/snapshots/golden_snapshot_tests__golden_support_level_unsupported.snap
---
source: tests/golden_snapshot_tests.rs
expression: "SupportLevel::Unsupported"
---
"unsupported"
