tests/snapshots/golden_snapshot_tests__golden_usage_normalized_default.snap
---
source: tests/golden_snapshot_tests.rs
expression: u
---
{
  "input_tokens": null,
  "output_tokens": null,
  "cache_read_tokens": null,
  "cache_write_tokens": null,
  "request_units": null,
  "estimated_cost_usd": null
}
