tests/snapshots/golden_snapshot_tests__golden_verification_report_default.snap
---
source: tests/golden_snapshot_tests.rs
expression: v
---
{
  "git_diff": null,
  "git_status": null,
  "harness_ok": false
}
