tests/snapshots/golden_snapshot_tests__golden_verification_report_full.snap
---
source: tests/golden_snapshot_tests.rs
expression: v
---
{
  "git_diff": "diff content here",
  "git_status": "M file.rs",
  "harness_ok": true
}
