tests/snapshots/golden_snapshot_tests__golden_version_parse_invalid.snap
---
source: tests/golden_snapshot_tests.rs
expression: "abp_protocol::parse_version(\"invalid\")"
---
None
