tests/snapshots/golden_snapshot_tests__golden_version_parse_valid.snap
---
source: tests/golden_snapshot_tests.rs
expression: "abp_protocol::parse_version(\"abp/v0.1\")"
---
Some(
    (
        0,
        1,
    ),
)
